# rev_owki_pers_json

./: App.js  README.md  app.json  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/Rev-Lib-Gen-Functions/: build.gradle
android/Rev-Lib-Gen-Functions/src/main/: AndroidManifest.xml
android/Rev-Lib-Gen-Pers/: CMakeLists.txt  build.gradle
android/Rev-Lib-Gen-Pers/src/main/: AndroidManifest.xml
android/Rev-Lib-Gen-Pers/src/main/cpp/: CMakeLists.txt  Rev-Lib-Gen-Pers.cpp
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/: CMakeLists.txt
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/RevDBModels/: REV_PERS_REVMETADATA_GEN_FUNCTIONS.java  RevAnnotation.java  RevEntity.java  RevEntityMetadata.java  RevEntityMetastrings.java  RevEntityRelationship.java  RevTimeline.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/RevDBModels/rev_entity_subtypes/: RevGroupEntity.java  RevObjectEntity.java  RevUserEntity.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/c_libs_core/: RevPersLibCreate.java  RevPersLibDelete.java  RevPersLibRead.java  RevPersLibUpdate.java  RevPersMathLibFunctionSets.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/c_libs_core/rev_java_lib/: RevPersFilesAsyncTask.java  RevPersJava.java  RevSQLiteLib.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/c_libs_core/rev_java_lib/rev_pre_pers/: RevPersSetRelsRemoteGUIDs.java  RevPrePersRevEntityRel.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_pers_file/: RevPersReadFileSizes.java  RevResizeFileSizes.java  RevResizeImageFile.java  RevSaveRemoteFileNamesMetadata.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_pers_file/rev_http_file_upload/: DemoService.java  HttpUpload.java  MultipartRequest.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_pers_gen_functions/: REV_RELS.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_pers_services/rev_pers/: RevDbSet.java  RevPersRevContainerEntity.java  RevPersRevEntity.java  RevPersRevMetaStrings.java  RevPersRevMetadata.java  RevPersRevObjectEntity.java  RevPersRevUserEntity.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_pers_services/rev_persistence/: FeedReaderContract.java  FeedReaderDbHelper.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/: RevJSONEntityClassConstructor.java  RevJSONEntityConstructor.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_local_server/: IReceiveDataFromRemoteServer.java  ReceiveDataFromRemoteServerService.java  RevLocalServer.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_pers/rev_data/rev_data_services/: RevRegCallbackIPOnRemoteServer.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_pers/rev_data/rev_data_services/revPers_rev_entity_annotations/: RevSaveRevEntitiesAnnotationsToServerResolver.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_pers/rev_data/rev_data_services/revPers_rev_entity_metadata/: RevResolvePartialMetadataUploads.java  RevSaveRevEntitiesMetadataToServerResolver.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_pers/rev_data/rev_entity_rel/: RevDownloadRemoteRelIds_By_Subject_Target_RelId.java  RevDownloadRevEntityRels_By_RemoteRevEntityGUID_RelValueIds.java  RevDownloadRevEntityRels_By_ResStatus_SubjectGUID.java  RevPersDownloadNewRelTargetsAsync.java  RevPersUpdateRevServerRelResolveStatus.java  RevPersUploadAcceptedRels.java  RevSetRemoteRelResStatus_By_RemoteRelId.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_pers/rev_data/rev_entity_rel/rev_upload/: RevResolvePartialRelsUploads.java  RevSaveRevEntityRelationshipToServerResolver.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_pers/rev_entity/: RevDownloadRevEntityInfoWrapper.java  RevDownloadRevEntityInfoWrapper_By_UserName.java  RevDownloadUserFromServer.java  RevPersDownloadRequestingRevEntityRels_By_RemoteRevEntityTargetGUID.java  RevPersEntityInfoWrapper.java  RevPersEntityInfoWrapperModel.java  RevResolvePartialEntityUploads.java  RevSaveRevEntitiesToServerResolver.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_pers/rev_pers_file/: DownloadImageTask.java  RevDownloadFileFromURL.java  RevFileUploaderAsyncHttpClient.java  RevMultiDownloadFileFromURL.java  RevRemoteFileExists.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_pers/rev_read_from_server/: IRevAsyncJSONResponse.java  ReadAllTargetedRevEntitiesJSON.java  RevAsyncGetJSONResponseTaskService.java  RevAsyncJSONResponseTaskServiceProvider.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_pers_views/: RevPublisherViewTabs.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_server_client/rev_resolver/rev_push_to_remote_server/: IRevAsyncJSONPostTask.java  RevAsyncJSONPostTaskService.java
android/Rev-Lib-Gen-Pers/src/main/java/rev/ca/rev_gen_lib_pers/rev_varags_data/: REV_SESSION_SETTINGS.java  RevPersConstantine.java  RevPersGenFunctions.java  RevVarArgsData.java
android/Rev-Lib-Gen-Pers/src/main/jni/: hello-libs.cpp  rev-pers-lib-create.cpp  (+10 more)
android/app/: _BUCK  build.gradle
android/app/src/main/: AndroidManifest.xml
components/: SiteContainer.js
components/rev_call/: MyLocalPortraitVideo.js  PeerVideoView.js
components/rev_text_chat/: ChatMessages.js  InboxMessage.js  OutboxChatMessage.js
ios/: Podfile
ios/Owki/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/Owki.xcodeproj/: project.pbxproj
ios/Owki.xcodeproj/xcshareddata/xcschemes/: Owki.xcscheme
ios/OwkiTests/: OwkiTests.m
rev_function_libs/: Context.js  rev_server_lib.js
(+146 files in other folders)
